# MiniNet

./: .gitignore  CMakeLists.txt  README.md
.codex/agents/: architecture-planner.toml  implementation-worker.toml  issue-reviewer.toml  test-worker.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: agent-workflow.md  architecture.md  learning-index.md  post-merge-checklist.md  project-rules.md  protocol.md  roadmap.md  simulation.md
docs/architecture-plans/: README.md  issue-10-unreliable-snapshot-synchronization.md  issue-12-network-simulator.md  issue-16-network-simulation-scenario-runner.md
docs/visualizer/: index.html
src/MiniNet.Client/: main.cpp
src/MiniNet.Server/: main.cpp
src/MiniNet.Sim/: main.cpp
src/MiniNet/include/mininet/: ack_tracker.hpp  connection.hpp  network_simulator.hpp  packet.hpp  ping.hpp  reliable_message.hpp  scenario.hpp  snapshot.hpp  udp_socket.hpp
src/MiniNet/src/: ack_tracker.cpp  connection.cpp  network_simulator.cpp  packet.cpp  ping.cpp  reliable_message.cpp  scenario.cpp  snapshot.cpp  udp_socket.cpp
tests/MiniNet.Tests/: test_main.cpp
